# omega-os

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  linked_list.rs  mod.rs  size_fixed.rs
src/gdt/: mod.rs
src/interrupts/: mod.rs
src/memory/: mod.rs
src/omega_test/: mod.rs
src/task/: mod.rs  simple_executor.rs
src/vga_buffer/: mod.rs
